chore: publish package as @lucasconnellm/fluxer
Rename package identity from @lucasconnellm/openclaw-fluxer to @lucasconnellm/fluxer in metadata and install docs.

OpenClaw appears to infer plugin identity from repo/package naming, and the
openclaw-fluxer name caused install/registration mismatches. Using
@lucasconnellm/fluxer avoids that resolution path.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lucasconnellm/openclaw-fluxer",
+  "name": "@lucasconnellm/fluxer",
   "version": "0.1.4",
   "description": "OpenClaw Fluxer channel plugin powered by @fluxerjs/core",
   "type": "module",
@@ -50,7 +50,7 @@
       "./index.ts"
     ],
     "install": {
-      "npmSpec": "@lucasconnellm/openclaw-fluxer",
+      "npmSpec": "@lucasconnellm/fluxer",
       "localPath": ".",
       "defaultChoice": "npm"
     }
