chore: migrate to pnpm with cached GitHub Actions installs

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "packageManager": "pnpm@10.30.0",
   "keywords": [
     "openclaw",
     "plugin",
