--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,14 +13,21 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v5
-      # Setup .npmrc file to publish to npm
-      - uses: actions/setup-node@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.30.0
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: "22.14.0"
-          registry-url: 'https://registry.npmjs.org'
-      - run: npm i -g npm@latest
-      - run: npm ci
-      - run: npm test
+          registry-url: "https://registry.npmjs.org"
+          cache: pnpm
+
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm test
 
       - name: Verify tag matches package.json version
         run: |
@@ -31,4 +38,5 @@ jobs:
             echo "::error::Tag v$TAG_VERSION does not match package.json version $PKG_VERSION"
             exit 1
           fi
-      - run: npm publish --access public
+
+      - run: pnpm publish --access public --no-git-checks
