ci: scope release-please token permissions to job only

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -6,14 +6,17 @@ on:
       - main
   workflow_dispatch:
 
+# Keep default workflow token scope minimal; elevate only for release-please job.
 permissions:
-  contents: write
-  pull-requests: write
-  issues: write
+  contents: read
 
 jobs:
   release-please:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      issues: write
     steps:
       - uses: googleapis/release-please-action@v4
         with:
