--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -1,6 +1,8 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "release-type": "node",
+  "monorepo-tags": false,
+  "include-component-in-tag": false,
   "packages": {
     ".": {
       "release-type": "node",
