--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "@fluxerjs/core": "^1.2.2",
-    "@fluxerjs/voice": "file:./vendor/fluxerjs-voice",
+    "@fluxerjs/voice": "^1.2.2",
+    "@livekit/rtc-node": "^0.13.24",
     "zod": "^4.3.6"
   },
   "peerDependencies": {
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@commitlint/cli": "^20.4.2",
     "@commitlint/config-conventional": "^20.4.2",
+    "@fluxerjs/collection": "^1.2.2",
     "@types/node": "^22.19.11",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
